# GrowGuard

./: README.md  docker-compose.yml
grow-guard-ui/: dockerfile  pyproject.toml  requirements.txt
grow-guard-ui/grow_guard_ui/: db_communication.py  test.py  🌱_Home.py
grow-guard-ui/grow_guard_ui/pages/: 1_📈_Dashboard.py
irrigation-auto-mode/: dockerfile  pyproject.toml
irrigation-auto-mode/irrigation_auto_mode/: irrigation-auto-mode.py
irrigation-control/air_pressure_sensor/: air_pressure_sensor.ino
irrigation-control/connectivity_test/: connectivity_test.ino
irrigation-control/irrigation_control/: irrigation_control.ino
irrigation-control/soil_hum_sensor/: soil_hum_sensor.ino
irrigation-control/temp_sensor/: temp_sensor.ino
irrigation-control/water_pump/: water_pump.ino
mock-sensors/: dockerfile  pyproject.toml
mock-sensors/mock_sensors/: mock-sensors.py
