[tool.poetry]
name = "grow-guard-ui"
version = "0.1.0"
description = ""
authors = ["Julian Kalhammer <julian.kalhammer@tum.de>"]
readme = "README.md"
packages = [{include = "grow_guard_ui"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.32.2"
influxdb-client = "^1.41.0"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
